@@ -3,6 +3,8 @@
 Added functions for extracting and plotting cohort data 
 (functions cohorts, pop.cohorts.plot)
 
+Added functions pop.trajectories and get.trajectory.indices.
+
 5.3-4 (4/10/2015)
 -----
 Projecting age-specific mortality:
